Fix dodge (notification at least)